@@ -45,7 +45,7 @@
 // include required headers
 //=====================================================================================================================
 	include "functions.inc.php";
-	
+
 //=====================================================================================================================
 // Session routines
 //=====================================================================================================================
@@ -62,7 +62,7 @@
 // Database connection routines
 //=====================================================================================================================
 	// connect to database
-	$mysql_connect = mysql_pconnect($dbhost, $dbuser, $dbpwd) or die("phpmyfamily cannot access the database server (".$dbhost.")");
+	$mysql_connect = mysql_connect_wrapper($dbhost, $dbuser, $dbpwd) or die("phpmyfamily cannot access the database server (".$dbhost.")");
 	$database_select = mysql_select_db($dbname) or die("phpmyfamily cannot access the database (".$dbname.")");
 
 //=====================================================================================================================
