@@ -1,3 +1,4 @@
+	Wrapper around mysql_connect
 	GedCom import added (experimental)
 	All fields are now editable
 	Can now delete anything (subject to permission)
